--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Lobanov Paul: Portfolio</title>
-
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-
-    <link rel="stylesheet" href="css/style.css">
-
     <style>@media print{*{background:transparent!important;color:#000!important;text-shadow:none!important;filter:none!important;-ms-filter:none!important}a,a:visited{color:#444!important;text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}tr,img{page-break-inside:avoid}img{max-width:100%!important}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}</style>    
   </head>
 
@@ -57,7 +52,7 @@
         <p>&copy; Web Performance 2017 <span id="crp-stats"></span></p>
       </footer>
     </div>
-    <script>
+    <script> var ms=document.createElement('link'); ms.rel='stylesheet'; ms.href='css/style.css'; document.getElementsByTagName('head')[0].appendChild(ms); </script> <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
